working on proj captions

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -364,7 +364,26 @@ footer {
   background-color: #787878;
 }
 
+@media (min-width: 576px) {
+  .proj-title {
+    position: absolute;
+    top: 80%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
+    font-size: x-small;
+  }
+}
+
 @media (min-width: 768px) {
+  .proj-title {
+    position: absolute;
+    top: 80%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
+    font-size: small;
+  }
   .landing-text > h3 {
     font-size: 2rem;
   }
@@ -397,6 +416,14 @@ footer {
 }
 
 @media (min-width: 992px) {
+  .proj-title {
+    position: absolute;
+    top: 80%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
+    font-size: medium;
+  }
   .landing-text > h3 {
     font-size: 2rem;
   }
@@ -430,6 +457,14 @@ footer {
 }
 
 @media (min-width: 1200px) {
+  .proj-title {
+    position: absolute;
+    top: 80%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
+    font-size: medium;
+  }
   .landing-text > h3 {
     font-size: 2rem;
   }
@@ -497,6 +532,19 @@ footer {
   text-align: center;
   padding: 20px 0;
   font-size: 30px;
+}
+
+.proj-title {
+  position: absolute;
+  top: 80%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+}
+
+.col-6 col-sm-4 {
+  position: relative;
+  text-align: center;
 }
 
 #overview {
