--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -369,6 +369,17 @@ footer {
   background-color: #787878;
 }
 
+@media (min-width: 576px) {
+  .proj-title {
+    position: absolute;
+    top: 80%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
+    font-size: x-small;
+  }
+}
+
 @media (min-width: 768px) {
   .proj-title {
     position: absolute;
@@ -376,7 +387,7 @@ footer {
     left: 50%;
     -webkit-transform: translate(-50%, -50%);
             transform: translate(-50%, -50%);
-    font-size: small;
+    font-size: medium;
   }
   .landing-text > h3 {
     font-size: 2rem;
@@ -538,7 +549,6 @@ footer {
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
-  font-size: x-small;
 }
 
 .col-6 col-sm-4 {
