--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -366,7 +366,13 @@ footer {
 
 // Small devices (landscape phones, 576px and up)
 @media (min-width: 576px) {
-
+    .proj-title{
+        position: absolute;
+        top: 80%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        font-size: x-small;
+    }
 }
 
 // Medium devices (tablets, 768px and up)
@@ -376,7 +382,7 @@ footer {
         top: 80%;
         left: 50%;
         transform: translate(-50%, -50%);
-        font-size: small;
+        font-size: medium;
     }
     .landing-text > h3 {
         font-size: 2rem;
@@ -578,7 +584,6 @@ footer {
       top: 80%;
       left: 50%;
       transform: translate(-50%, -50%);
-      font-size: x-small;
   }
 
   .col-6 col-sm-4 {
