--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -362,13 +362,21 @@ footer {
     background-color: $gray;
 }
 
+.proj-title{
+    position: absolute;
+    top: 74%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: x-small;
+}
+
 // MEDIA QUERIES
 
 // Small devices (landscape phones, 576px and up)
 @media (min-width: 576px) {
     .proj-title{
         position: absolute;
-        top: 80%;
+        top: 74%;
         left: 50%;
         transform: translate(-50%, -50%);
         font-size: x-small;
@@ -379,10 +387,10 @@ footer {
 @media (min-width: 768px) {
     .proj-title{
         position: absolute;
-        top: 80%;
+        top: 74%;
         left: 50%;
         transform: translate(-50%, -50%);
-        font-size: medium;
+        font-size: 1.3vw;
     }
     .landing-text > h3 {
         font-size: 2rem;
@@ -436,10 +444,9 @@ footer {
 @media (min-width: 992px) {
     .proj-title{
         position: absolute;
-        top: 80%;
+        top: 74%;
         left: 50%;
         transform: translate(-50%, -50%);
-        font-size: medium;
     }
     .landing-text > h3 {
         font-size: 2rem;
@@ -493,7 +500,7 @@ footer {
 @media (min-width: 1200px) {
     .proj-title{
         position: absolute;
-        top: 80%;
+        top: 74%;
         left: 50%;
         transform: translate(-50%, -50%);
         font-size: medium;
@@ -579,12 +586,7 @@ footer {
 
   //PROJECTS PAGE
 
-  .proj-title{
-      position: absolute;
-      top: 80%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-  }
+  
 
   .col-6 col-sm-4 {
       position: relative;
