Justified 'About' text

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -21,6 +21,10 @@ body {
   height: auto;
 }
 
+#about > .container {
+  text-align: justify;
+}
+
 h2 {
   font-weight: 700;
   font-style: italic;
