--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -32,6 +32,10 @@ body {
     height: auto;
 }
 
+#about > .container {
+    text-align: justify;
+}
+
 h2 {
     font-weight: 700;
     font-style: italic;
