--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -99,6 +99,7 @@ nav {
 .landing-text > h3 {
     font-weight: 800;
     font-size: 1.5rem;
+    padding-bottom: 1.75rem;
     // background-color: white;
 }
 
