--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -24,11 +24,15 @@ body {
 }
 
 // **** Temporarily made each section as large as the screen size to demonstrate scrolling functionality ****
-#landing, #contact, #projects {
-    height: 100vh;
+ #projects, #members {
+     height: 50vh;
 }
 
-#about,  #members {
+#contact, #landing, #about {
+    height: 92vh;
+}
+
+#about {
     height: auto;
 }
 
@@ -132,7 +136,7 @@ nav {
 }
 
 #about {
-    padding: 6.5em 0;
+    padding: 2em 0;
     flex-direction: column;
 }
 
@@ -166,7 +170,6 @@ h5 {
     justify-content: top;
     align-items: center;
     position: relative;
-    height: 100vh;
 }
 
 .labels {
@@ -394,6 +397,9 @@ footer {
 
 // Medium devices (tablets, 768px and up)
 @media (min-width: 768px) {
+    #landing, #contact, #projects, #about, #members{
+        height: 100vh;
+   }
     .proj-title{
         position: absolute;
         top: 74%;
@@ -462,6 +468,10 @@ footer {
 
 // Large devices (desktops, 992px and up)
 @media (min-width: 992px) {
+    #landing, #contact, #projects, #about, #members{
+        height: 100vh;
+   }
+
     .proj-title{
         position: absolute;
         top: 74%;
@@ -530,6 +540,10 @@ footer {
 
 // Extra large devices (large desktops, 1200px and up)
 @media (min-width: 1200px) {
+    #landing, #contact, #projects, #about, #members{
+        height: 100vh;
+   }
+
     .proj-title{
         position: absolute;
         top: 74%;
