--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -29,7 +29,7 @@ body {
 }
 
 #contact, #landing, #about {
-    height: 92vh;
+    height: 100vh;
 }
 
 #about {
@@ -122,6 +122,7 @@ nav {
 .landing-text-bkd {
     background: #FFFFFF;
     padding: 0 0.75rem;
+    text-align: center;
 }
 .contact-txt > h2 {
     font-weight: 800;
