laptop spacing adjustment

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -21,10 +21,6 @@ body {
   height: 100vh;
 }
 
-#about {
-  height: auto;
-}
-
 #about > .container {
   text-align: justify;
 }
@@ -406,6 +402,9 @@ footer {
   #landing, #contact, #projects, #about, #members {
     height: 100vh;
   }
+  #about, #members {
+    padding-top: 90px;
+  }
   .proj-title {
     position: absolute;
     top: 74%;
@@ -451,16 +450,19 @@ footer {
     padding-bottom: 0px;
   }
   #about > .container > h2 {
-    padding-bottom: 2em;
+    padding-bottom: 1em;
   }
   #projects > .container > h2 {
-    padding-bottom: 2em;
+    padding-bottom: 1em;
   }
 }
 
 @media (min-width: 992px) {
   #landing, #contact, #projects, #about, #members {
     height: 100vh;
+  }
+  #about, #members {
+    padding-top: 90px;
   }
   .proj-title {
     position: absolute;
@@ -503,10 +505,10 @@ footer {
     padding-bottom: 0px;
   }
   #about > .container > h2 {
-    padding-bottom: 2em;
+    padding-bottom: 1em;
   }
   #projects > .container > h2 {
-    padding-bottom: 2em;
+    padding-bottom: 1em;
   }
 }
 
