Fixing spacing on other screen sizes 3.0

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -404,10 +404,10 @@ footer {
 
 @media (min-width: 768px) {
   #landing, #contact, #projects, #about, #members {
-    height: 100vh;
+    height: auto;
   }
-  #about, #members {
-    padding-top: 90px;
+  #about {
+    padding-top: 140px;
   }
   .proj-title {
     position: absolute;
@@ -465,7 +465,7 @@ footer {
   #landing, #contact, #projects, #about, #members {
     height: 100vh;
   }
-  #about {
+  #about, #members {
     padding-top: 110px;
   }
   #members > .container {
