--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -401,6 +401,14 @@ footer {
 }
 
 @media (min-width: 576px) {
+  #landing, #contact, #projects {
+    max-height: 50vw;
+    height: 90vh;
+  }
+  #members {
+    max-height: 100vw;
+    height: 100vh;
+  }
   .proj-title {
     position: absolute;
     top: 74%;
@@ -408,6 +416,31 @@ footer {
     -webkit-transform: translate(-50%, -50%);
             transform: translate(-50%, -50%);
     font-size: x-small;
+  }
+  .artpiece {
+    -webkit-transform: none;
+            transform: none;
+  }
+  #overlay {
+    -webkit-transform: none;
+            transform: none;
+  }
+  #members > .container > h2 {
+    padding-bottom: 0px;
+  }
+  #red-string img {
+    height: auto;
+    width: 10vw;
+  }
+  #blue-string img {
+    height: 25vh;
+  }
+  #green-string img {
+    height: auto;
+    width: 10vw;
+  }
+  #yellow-string img {
+    height: 25vh;
   }
 }
 
@@ -478,10 +511,8 @@ footer {
     height: 50vw;
   }
   #about {
-    height: 80vw;
-  }
-  #about, #members {
-    padding-top: 110px;
+    height: 90vh;
+    padding-top: 10vh;
   }
   #members > .container {
     width: 120vh;
@@ -535,14 +566,17 @@ footer {
 }
 
 @media (min-width: 1200px) {
-  #landing, #contact, #projects, #about {
-    height: 60vw;
-  }
-  #about {
-    height: 70vw;
+  #landing, #contact, #projects, #members, #about {
+    min-height: 50vw;
+    height: 90vh;
   }
   #members {
-    height: 50vw;
+    min-height: 40vw;
+    height: 80vh;
+  }
+  #about {
+    min-height: 60vw;
+    height: 90vh;
   }
   #members > .container {
     width: 60vw;
