--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -393,12 +393,56 @@ footer {
 
 // Small devices (landscape phones, 576px and up)
 @media (min-width: 576px) {
+    #landing, #contact, #projects{
+        max-height: 50vw;
+        height: 90vh;
+    }
+
+    #members{
+        max-height: 100vw;
+        height: 100vh;
+    }
+
     .proj-title{
         position: absolute;
         top: 74%;
         left: 50%;
         transform: translate(-50%, -50%);
         font-size: x-small;
+    }
+    .artpiece {
+        transform: none;
+    }
+    #overlay {
+        transform: none;
+    }
+    #members > .container > h2 {
+        padding-bottom: 0px;
+    }
+    #red-string {
+        img {
+            height: auto;
+            width: 10vw;
+        }
+    }
+
+    #blue-string {
+        img {
+            height: 25vh;
+        }
+    }
+
+    #green-string {
+        img {
+            height: auto;
+            width: 10vw;
+        }
+    }
+
+    #yellow-string {
+        img {
+            height: 25vh;
+        }
     }
 }
 
@@ -492,11 +536,8 @@ footer {
     }
 
     #about {
-        height: 80vw;
-    }
-    
-    #about, #members {
-    padding-top: 110px;
+        height: 90vh;
+        padding-top: 10vh;
     }
 
     #members > .container {
@@ -572,17 +613,20 @@ footer {
 // Extra large devices (large desktops, 1200px and up)
 @media (min-width: 1200px) {
     
-    #landing, #contact, #projects, #about {
-        height: 60vw;
-   }
-     
-   #about {
-        height: 70vw;
+    #landing, #contact, #projects, #members, #about {
+        min-height: 50vw;
+        height: 90vh;
    }
 
    #members {
-    height: 50vw;
+        min-height: 40vw;
+        height: 80vh;
    }
+
+   #about {
+    min-height: 60vw;
+    height: 90vh;
+}
 
    #members > .container {
     width: 60vw;
