--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -450,15 +450,18 @@ footer {
 @media (min-width: 768px) {
     #landing, #contact, #projects{
         height: 90vh;
+        min-height: 50vw;
     }
 
     #members
     {
         height: 60vw;
+        min-height: 120vw;
     }
 
     #about {
         height: 80vw;
+        min-height: 120vw;
     }
 
 
@@ -532,12 +535,15 @@ footer {
 @media (min-width: 992px) {
 
     #landing, #contact, #projects, #members{
-        height: 50vw;
+        height: 90vh;
+        min-height: 100vw;
+        max-height: 100vh;
     }
 
     #about {
-        height: 90vh;
         padding-top: 10vh;
+        min-height: 100vw;
+        max-height: 80vh;
     }
 
     #members > .container {
