--- a/assets/css/projects.css
+++ b/assets/css/projects.css
@@ -12,17 +12,17 @@ h4 {
   padding-bottom: 1.5em;
 }
 
-.team-container>.row {
+.team-container > .row {
   padding-bottom: 1em;
 }
 
 .team-container p {
-  font-size: 0.6rem;
+  font-size: 0.01rem;
   margin-bottom: 0;
 }
 
 .team-container p:nth-of-type(1) {
-  font-size: 0.75rem;
+  font-size: 0.01rem;
 }
 
 .team-container img {
@@ -121,53 +121,47 @@ figcaption {
   padding-bottom: 2em;
 }
 
-ol>ul {
+ol > ul {
   list-style: disc;
 }
 
 #teaminfo {
   visibility: hidden;
-  display: inline
-  
+  display: none;
 }
 
 h7 {
   font-size: 0.85rem;
 }
 
-
 @media (min-width: 576px) {
   #teaminfo {
     visibility: hidden;
-    display: inline
+    display: none;
+    font-size: .1rem;
   }
 }
-
 
 @media (min-width: 768px) {
   .team-container p {
     font-size: 0.75rem;
   }
-
   .team-container p:nth-of-type(1) {
     font-size: 0.85rem;
   }
-
   .project-overview-container p {
     font-size: 1rem;
   }
-
   .project-overview-container .project {
     font-size: 1rem;
   }
-
   #groupsource-logo {
     width: 50vw;
   }
-
   #teaminfo {
     visibility: visible;
     display: inline;
+    font-size: .85rem;
   }
 }
 
@@ -175,14 +169,9 @@ h7 {
   #groupsource-logo {
     width: 40vw;
   }
-
   #teaminfo {
     visibility: visible;
     display: inline;
-
   }
-
-
-
 }
 /*# sourceMappingURL=projects.css.map */
