--- a/assets/css/projects.scss
+++ b/assets/css/projects.scss
@@ -143,6 +143,7 @@ h3 {
   
   h7 {
     font-size: 0.85rem;
+    text-align: center;
   }
   
   
@@ -151,6 +152,7 @@ h3 {
       visibility: hidden;
       display: none;
       font-size: .1rem;
+      text-align: center;
     }
   }
   
