--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -28,7 +28,7 @@ body {
 }
 
 #contact, #landing {
-    height: 100vh;
+    height: 90vh;
 }
 
 #about > .container {
@@ -113,7 +113,8 @@ nav {
 .landing-text > h3 {
     font-weight: 800;
     font-size: 1.5rem;
-    padding-bottom: 1.75rem;
+    padding-bottom: 1rem;
+    padding-top: 3rem;
     // background-color: white;
 }
 
