--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -18,7 +18,7 @@ body {
 }
 
 #contact, #landing {
-  height: 100vh;
+  height: 90vh;
 }
 
 #about > .container {
@@ -88,7 +88,8 @@ nav {
 .landing-text > h3 {
   font-weight: 800;
   font-size: 1.5rem;
-  padding-bottom: 1.75rem;
+  padding-bottom: 1rem;
+  padding-top: 3rem;
 }
 
 .landing-text > h1 {
