--- a/assets/css/projects.scss
+++ b/assets/css/projects.scss
@@ -140,6 +140,16 @@ h3 {
     display: none;
     
   }
+
+  .web-team {
+      visibility: hidden;
+      display: none;
+  }
+
+  .mobile-team {
+    visibility: visible;
+    display: inline;
+}
   
   h7 {
     font-size: 0.85rem;
@@ -158,6 +168,15 @@ h3 {
   
   
   @media (min-width: 768px) {
+    .web-team {
+        visibility: visible;
+        display: inline;
+    }
+
+    .mobile-team {
+        visibility: hidden;
+        display: none;
+    }
     .team-container p {
       font-size: 0.75rem;
     }
@@ -193,6 +212,15 @@ h3 {
     #teaminfo {
       visibility: visible;
       display: inline;
-  
+    }
+
+    .web-team {
+        visibility: visible;
+        display: inline;
+    }
+
+    .mobile-team {
+        visibility: hidden;
+        display: none;
     }
 }
