--- a/v1.5/about.css
+++ b/v1.5/about.css
@@ -29,10 +29,17 @@ h6 {
     text-align: center;
 }
 
+#values {
+    text-align: right;
+    padding-right: 60px;
+}
+
 .column {
     float: left;
     width: 50%;
     height: 580px;
+    text-align: justify;
+    text-justify: inter-word;
 }
 
 .row:after {
@@ -45,12 +52,11 @@ p {
     padding-right: 60px;
 }
 
-svg{
+svg {
     display: block;
     margin-left: auto;
     margin-right: auto;
     margin-top: 20px;
     height: 70vh;
     width: 20vh
-   
 }
