--- a/v1.5/about.scss
+++ b/v1.5/about.scss
@@ -29,10 +29,17 @@ h6 {
     text-align: center;
 }
 
+#values {
+    text-align: right;
+    padding-right: 60px;
+}
+
 .column {
     float: left;
     width: 50%;
     height: 580px;
+    text-align: justify;
+    text-justify: inter-word;
 }
 
 .row:after {
