fixed all the images

--- a/v1.5/about.css
+++ b/v1.5/about.css
@@ -37,7 +37,7 @@ h6 {
 .column {
     float: left;
     width: 50%;
-    height: 580px;
+    height: 590px;
     text-align: justify;
     text-justify: inter-word;
 }
@@ -52,11 +52,11 @@ p {
     padding-right: 60px;
 }
 
-svg {
+#aboutpic {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 20px;
-    height: 70vh;
-    width: 20vh
+    margin-top: 5vh;
+    height: 60vh;
+  
 }
